--- a/config
+++ b/config
@@ -1,10 +1,11 @@
 font-family = "PragmataProMonoLiga Nerd Font"
-font-size = 22
+font-size = 17
 font-feature = calt
 
 window-padding-x = 10
 window-padding-y = 10
 window-padding-balance = true
+window-decoration = false
 
 macos-titlebar-style = hidden
 macos-option-as-alt = true
