use Berkeley Mono font

--- a/config
+++ b/config
@@ -1,5 +1,4 @@
-font-family = "PragmataProMonoLiga Nerd Font"
-font-size = 17
+font-family = "Berkeley Mono"
 font-feature = calt
 
 window-padding-x = 10
