--- a/config
+++ b/config
@@ -1,4 +1,4 @@
-font-family = "Berkeley Mono"
+font-family = "MonoLisa"
 font-feature = calt
 
 window-padding-x = 10
@@ -11,4 +11,4 @@ macos-option-as-alt = true
 
 mouse-hide-while-typing = true
 
-theme = gruvbox-material-soft-dark
+theme = rose-pine
